--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-to-print": "^2.14.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
