--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-to-print": "^2.14.4",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://sofiacanard.com/cuentodigital/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
